# VisionGuard-Frontend

./: .env.example  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  dockerignore  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: app.py  requirements.txt
frontend/css/javascript/: server.js
frontend/instance/: users.db
frontend/templates/: areas.html  authlayout.html  camera_groups.html  camera_report_detail.html  cameras.html  dashboard.html  feed.html  group_report_detail.html  layout.html  locations.html  login.html  reports.html  settings.html  signup.html
instance/: users.db
src/visionguard/: api_client.py  main.py  ui_camera_picker.py
src/visionguard/tests/: mainTest.py
